add copyright and refactor variable naming

--- a/manifests/03_configmaps.yml
+++ b/manifests/03_configmaps.yml
@@ -59,7 +59,7 @@ data:
     def get_node_data(node_name, node_label_names):
         try:
             with open('/var/run/secrets/kubernetes.io/serviceaccount/token', 'r') as file:
-                token = file.read()
+                auth_token = file.read()
         except OSError:
             eprint('Failed reading /var/run/secrets/kubernetes.io/serviceaccount/token')
             exit(1)
@@ -68,7 +68,7 @@ data:
             exit(1)
 
         resp = requests.get(url='https://kubernetes.default.svc/api/v1/nodes/{node_name}'.format(
-            node_name=node_name), headers={'Authorization': 'Bearer ' + token}, verify=False)
+            node_name=node_name), headers={'Authorization': 'Bearer ' + auth_token}, verify=False)
         if resp.status_code != HTTPStatus.OK:
             eprint('Failed to read data from ''{node}'' (status: {status})'.format(
                 node=node_name, status=resp.status_code))
