enforce automountServiceAccountToken to "true"
Enforce mounting SA token in the daemonset to avoid a situation like in #1 .

--- a/manifests/04_daemonset.yml
+++ b/manifests/04_daemonset.yml
@@ -32,6 +32,7 @@ spec:
         app: node-labeling
     spec:
       serviceAccountName: node-labeling-robot
+      automountServiceAccountToken: true
       volumes:
       - name: files
         configMap:
